modified:   css/styles.css 	modified:   css/styles.css.map 	modified:   index.html 	modified:   js/main.js 	new file:   public/img/buy/buy_mark.png 	new file:   public/img/buy/buy_strokes.png 	modified:   scss/base/_base.scss 	modified:   scss/blocks/about.scss 	modified:   scss/blocks/buy.scss 	modified:   scss/blocks/footer.scss 	modified:   scss/blocks/roadmap.scss 	modified:   scss/blocks/tokenomics.scss

--- a/index.html
+++ b/index.html
@@ -176,6 +176,7 @@
         </div>
     </section>
 
+
     <!-- TOKENOMICS -->
     <section class="tokenomics">
         <div class="tokenomics__container">
@@ -208,8 +209,16 @@
             <div class="tokenomics__bottom">
 
                 <div class="tokenomics__code">
-                    <span class="code__key" id="key">43uhykFm8Y9gLvHrWs7r7w1HCKu6vikDi7j394FaSfNz</span><button
-                        type="button" class="code__copy" id="copy">COPY</button>
+                    <div class="code__key">
+                        <img class="code__bg" src="public/img/tokenomics/code_bg.png" alt="" width="558" height="87"
+                            loading="lazy">
+                        <span id="key">43uhykFm8Y9gLvHrWs7r7w1HCKu6vikDi7j394FaSfNz</span>
+                    </div>
+                    <div class="code__copy">
+                        <img class="code__bg" src="public/img/tokenomics/copy_bg.png" alt="" width="116" height="76"
+                            loading="lazy">
+                        <button type="button" id="copy">COPY</button>
+                    </div>
                 </div>
 
                 <div class="tokenomics__total total">
@@ -220,6 +229,166 @@
             </div>
         </div>
     </section>
+
+
+    <!-- ROADMAP -->
+    <section class="roadmap">
+        <div class="roadmap__container">
+            <h2 class="roadmap__title">Roadmap</h2>
+            <div class="roadmap__schedule">
+
+                <div class="schedule__item">
+                    <h3 class="schedule__title">Q3 2024</h3>
+                    <div>
+                        <span>Idea and Concept of Meme Coin</span>
+                        <span>Team and Structure</span>
+                        <span>Initial Funding</span>
+                    </div>
+                </div>
+
+                <div class="schedule__item">
+                    <h3 class="schedule__title">Q4 2024</h3>
+                    <div>
+                        <span>Technical Development</span>
+                        <span>Website and Social Media</span>
+                        <span class="not-done">Community and Marketing</span>
+                    </div>
+                </div>
+
+                <div class="schedule__item">
+                    <h3 class="schedule__title">Q1 2025</h3>
+                    <div>
+                        <span class="not-done">Testing and Security Audit</span>
+                        <span class="not-done">Public Release</span>
+                        <span class="not-done">Exchange Listing</span>
+                    </div>
+                </div>
+
+                <div class="schedule__item">
+                    <h3 class="schedule__title">Q2 2025</h3>
+                    <div>
+                        <span class="not-done">Initial Coin Offering (ICO)</span>
+                        <span class="not-done">Partnerships and Integrations</span>
+                        <span class="not-done">Community Expansion</span>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+    </section>
+
+
+    <!-- BUY -->
+    <section class="buy">
+        <div class="buy__container">
+            <h2 class="buy__title">How to buy</h2>
+            <h3 class="buy__subtitle">from our crypto teacher</h3>
+
+            <div class="buy__wrap">
+                <div class="buy__steps">
+
+                    <div class="step">
+                        <span>
+                            <span class="step__text">
+                                <img class="step__mark" src="public/img/buy/buy_mark.png" alt="" width="37" height="35"
+                                    loading="lazy">
+                                <span>Download & setup MetaMask Wallet</span>
+                            </span>
+                            <span class="step__accent">Download</span>
+                            <a class="step__link" href="javascript:void(0)" target="_blank">
+                                <span>MetaMask</span>
+                                <img src="public/img/buy/buy_strokes.png" alt="" width="107" height="20" loading="lazy">
+                            </a>
+                        </span>
+                    </div>
+
+                    <div class="step">
+                        <span>
+                            <span class="step__text">
+                                <img class="step__mark" src="public/img/buy/buy_mark.png" alt="" width="37" height="35"
+                                    loading="lazy">
+                                <span>Buy and send ETH to MetaMask </span>
+                            </span>
+                            <span class="step__accent">Buy ETH on an exchange (i.e. Binance, Kraken, Coinbase etc.).
+                                Transfer to your Base wallet address.</span>
+                        </span>
+                    </div>
+
+                    <div class="step">
+                        <span>
+
+                            <span class="step__text">
+                                <img class="step__mark" src="public/img/buy/buy_mark.png" alt="" width="37" height="35"
+                                    loading="lazy">
+                                <span>Head on to Uniswap and swap for $LandLordcoin</span>
+                            </span>
+                            <a class="step__link" href="javascript:void(0)" target="_blank">
+                                <span>Click here</span>
+                                <img src="public/img/buy/buy_strokes.png" alt="" width="107" height="20" loading="lazy">
+                            </a>
+                            <span class="step__accent">to head on over to Uniswap or use the address 0xcd... to select
+                                $LandLordcoin.</span>
+                        </span>
+                    </div>
+
+                    <div class="step">
+                        <span>
+                            <span class="step__text">
+                                <img class="step__mark" src="public/img/buy/buy_mark.png" alt="" width="37" height="35"
+                                    loading="lazy">
+                                <span>View $LandLordcoin and HODL </span>
+                            </span>
+                            <span class="step__accent">Swap ETH for $LandLordcoin. Now you can see $LandLordcoin in your
+                                wallet. Lastly HODL!</span>
+                        </span>
+                    </div>
+
+
+                </div>
+                <div class="buy__right">
+                    <img class="buy__img" src="public/img/buy/buy_img.png" alt="" width="1040" height="909"
+                        loading="lazy">
+                </div>
+            </div>
+        </div>
+    </section>
+
+
+    <!-- FOOTER -->
+    <footer class="footer">
+        <div class="footer__container">
+
+            <div class="footer__left">
+                <div class="footer__logo">
+                    <img src="public/img/footer/footer_img.png" alt="logo" width="180" height="219" loading="lazy">
+                </div>
+                <h2 class="footer__title">OUR TURE HERO</h2>
+                <h3 class="footer__subtitle">LandLordPepe</h3>
+            </div>
+
+            <div class="footer__right">
+
+                <ol class="footer__navigation navigation">
+                    <li><a href="#home" class="navigation__link">Home</a></li>
+                    <li><a href="#about" class="navigation__link">About</a></li>
+                    <li><a href="#tokenomics" class="navigation__link">Tokenomics</a></li>
+                    <li><a href="#roadmap" class="navigation__link">roadmap</a></li>
+                    <li><a href="#buy" class="navigation__link">how to buy</a></li>
+                </ol>
+
+                <div class="footer__bottom">
+                    <div class="footer__copyright">© 2024 parvel. All Rights Reserved.</div>
+                    <div class="footer__socials"></div>
+                </div>
+
+            </div>
+        </div>
+    </footer>
+
+
+    <div class="tooltip">
+        Текст скопирован в буфер обмена
+    </div>
 
     <script src="js/main.js"></script>
 </body>
