modified:   css/styles.css 	modified:   css/styles.css.map 	modified:   index.html 	modified:   js/main.js 	modified:   public/img/home/home_bg.jpg 	modified:   scss/blocks/about.scss 	modified:   scss/blocks/roadmap.scss 	modified:   scss/blocks/tokenomics.scss

--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
             </div>
 
 
-            <div class="about__toggler toggler swiper-wrapper">
+            <div class="about__toggler toggler">
 
                 <button class="toggler__btn active" type="button" aria-label="toggle" data-type="0">
                     <picture>
@@ -416,7 +416,6 @@
             <div class="footer__right">
 
                 <ol class="footer__navigation">
-                    <li><a href="#home" class="footer__link">Home</a></li>
                     <li><a href="#about" class="footer__link">About</a></li>
                     <li><a href="#tokenomics" class="footer__link">Tokenomics</a></li>
                     <li><a href="#roadmap" class="footer__link">roadmap</a></li>
