modified:   index.html

--- a/index.html
+++ b/index.html
@@ -42,10 +42,13 @@
                         <a href="#about" class="menu__link">About</a>
                     </li>
                     <li>
+                        <a href="#tokenomics" class="menu__link">tokenomics</a>
+                    </li>
+                    <li>
                         <a href="#roadmap" class="menu__link">roadmap</a>
                     </li>
                     <li>
-                        <a href="#questions" class="menu__link">Questions</a>
+                        <a href="#buy" class="menu__link">how to buy</a>
                     </li>
                 </ol>
             </div>
